--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@react-three/fiber": "^8.16.3",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.3",
     "polished": "^4.3.1",
     "react": "^18",
