--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@react-three/fiber": "^8.16.3",
-    "@vercel/analytics": "^1.3.1",
+    "@vercel/analytics": "latest",
     "next": "14.2.15",
     "polished": "^4.3.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.9",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
